--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  get: ^4.6.6
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
