--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  gap: ^3.0.1
   get: ^4.6.6
   http: ^1.2.1
+  iconify_flutter_plus: ^1.0.3
 
 dev_dependencies:
   flutter_test:
