--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.1
   iconify_flutter_plus: ^1.0.3
+  super_string: ^1.0.3
 
 dev_dependencies:
   flutter_test:
