--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
+  circular_countdown:
+    path: packages/circular_countdown-master/
   clipboard: ^0.1.3
   flutter:
     sdk: flutter
