--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_spinkit: ^5.2.0
   gap: ^3.0.1
   get: ^4.6.6
   http: ^1.2.1
