--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_spinkit: ^5.2.0
+  flutter_tts: ^4.0.1
   gap: ^3.0.1
   get: ^4.6.6
   http: ^1.2.1
