--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   circular_countdown:
     path: packages/circular_countdown-master/
   clipboard: ^0.1.3
+  expandable_text: ^2.3.0
+  fluentui_emoji_icon: ^0.0.2
+  fluentui_icons: ^1.0.0
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
@@ -19,6 +22,7 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.1
   iconify_flutter_plus: ^1.0.3
+  sliver_tools: ^0.2.12
   speech_to_text: ^6.6.1
   super_string: ^1.0.3
 
