--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
+  animated_text_kit: ^4.2.2
   circular_countdown:
     path: packages/circular_countdown-master/
   clipboard: ^0.1.3
