--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,17 @@
-allprojects {
+buildscript {
+    ext.kotlin_version = '1.9.23'
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
