--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     path: packages/circular_countdown-master/
   clipboard: ^0.1.3
   expandable_text: ^2.3.0
+  firebase_core: ^2.28.0
   fluentui_emoji_icon: ^0.0.2
   fluentui_icons: ^1.0.0
   flutter:
