--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 .env
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+ios/firebase_app_id_file.json
+macos/Runner/GoogleService-Info.plist
+macos/firebase_app_id_file.json
+lib/firebase_options.dart
