--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_tts: ^4.0.1
   gap: ^3.0.1
   get: ^4.6.6
-  google_ml_kit: ^0.16.3
+  google_mlkit_text_recognition: ^0.11.0
   http: ^1.2.1
   iconify_flutter: 
     path: packages/iconify_flutter_plus/
