--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chit_chat_pro
-description: "A new Flutter project."
+description: "Chit Chat Pro is a cutting-edge application designed to emulate the functionalities of chat GPT, focusing on seamless communication and content creation. It integrates advanced features such as text-to-speech, speech-to-text, and image-to-text conversion, all wrapped in an efficient and user-friendly interface."
 publish_to: 'none'
 version: 0.1.0
 
