Added splash page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_tts: ^4.0.1
   gap: ^3.0.1
   get: ^4.6.6
+  glowy_borders: ^1.0.2
   google_mlkit_text_recognition: ^0.11.0
   http: ^1.2.1
   iconify_flutter: 
@@ -50,6 +51,7 @@ flutter:
   
   assets:
     - .env
+    - assets/launcher_icon/
 
   fonts:
     - family: LovelyMamma
